<resources>
    <string name="app_name">BgRemover</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="congratulations">Congratulations</string>
    <string name="owned_tip">Welcome to join our premium membership, we will continue to provide you with excellent service and product features. Thank you for joining.</string>
    <string name="join_now">Join Now</string>
    <string name="join_free">3 Days free trial</string>
    <string name="renew_tip">Auto-renewable,You can cancel anytime.</string>
    <string name="vip_tip1">Unlimited photo processing</string>
    <string name="vip_tip2">More Premium features in the future</string>
    <string name="join_premium">Join Premium</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="version">Version</string>
    <string name="popup_content_opt_mand_update">A new version is available please upgrade for better experience</string>
    <string name="popup_button_goto_store">Go to store</string>
    <string name="popup_content_req_mand_update">Important update! Please update to the latest version, otherwise it will affect the app use</string>
    <string name="popup_content_no_update">Current version is the latest one</string>
    <string name="popup_button_ok">OK</string>
    <string name="rate_title">Thanks for giving us 5 stars!</string>
    <string name="rate_tip">Thanks for liking and supporting our app!</string>
    <string name="cancel">cancel</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_tip">Upload photos to start removing background</string>
    <string name="sub_page_opt_daily">Daily</string>
    <string name="sub_page_ts_weekly">Weekly</string>
    <string name="sub_page_opt_monthly">Monthly</string>
    <string name="sub_page_opt_yearly">Yearly</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="confirm">Confirm</string>
    <string name="reselect_image">Reselect Image</string>
    <string name="start">Start</string>
    <string name="task_failed_please_retry">Task failed, please retry</string>
    <string name="result_tip">Unlimited photo processing \nMore Premium features in the future</string>
    <string name="loading">Loading...</string>
    <string name="loading_tip1">AI is Processing</string>
    <string name="loading_tip2">Analyzing your photos</string>
    <string name="loading_tip3">Please wait.</string>
    <string name="save_failed">save failed</string>
    <string name="save_success">save success</string>
</resources>