<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/rate_title"
        android:textColor="@color/text_black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/rate_tip"
        android:textColor="@color/text_black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:isIndicator="false"
        android:progressTint="@color/rating_star"
        android:secondaryProgressTint="@color/transparent"
        android:progressBackgroundTint="@color/rating_star_gray"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:fontFamily="sans-serif-medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/popup_button_ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:fontFamily="sans-serif-medium"
            tools:text="Go to store Go to store" />
    </LinearLayout>

</LinearLayout>